--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serverstart": "DEBUG=odinbook_server:* npm run devstart"
   },
   "dependencies": {
+    "async": "^3.2.3",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.1.0",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.6.2"
